--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,68 @@
+#配置security，登陆用户名和密码；设置项目名称，数据库配置
+spring:
+  application:
+    name: luxh
 
+  datasource:
+    dialect: mariadb
+    url: jdbc:mysql://192.168.124.8:3306/stm?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123456
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+
+    #连接池的补充设置
+    initialSize: 10
+    minIdle: 10
+    maxActive: 20
+    #等到超时时间
+    maxWait: 60000
+    #配置间隔多久一次检测
+    timeBetweenEvictionRunsMillis: 60000
+    #配置一个连接在池中最小生存时间，单位毫秒
+    minEvictableIdleTimeMillis: 300000
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+
+    #打开PSCache 并且指定每一个连接上PSCache的大小
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    spring.datasource.filters: stat,wall,log4j
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+  #配置连接池属性
+  redis:
+    jedis:
+      pool:
+        min-idle: 5
+        max-active: 10
+        max-idle: 10
+        max-wait: 2000m
+    port: 6379
+    host: 192.168.124.8
+    timeout: 1000m
+    maxActive: 250
+    maxIdle: 5
+    maxWait: 1000
+    testOnBorrow: true
+  #配置redis服务器属性
+
+  security:
+    user:
+      name: root
+      password: 123456
+
+
+
+#设置服务端口号，路径，请求超时时间
+server:
+  port: 18080
+  servlet:
+    context-path: /
+    session:
+      timeout: 600m
+
+#设置logback日志
+logging:
+  config: classpath:logback-spring.xml
